Fixed header for projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,5 +6,9 @@ import { NAME } from "../utils/constants";
 
 <Layout title={`Projects | ${NAME}`} description={`All of ${NAME}'s Projects`}>
   <Header />
-  <h1 class="text-3xl font-headline">UNDER CONSTRUCTION</h1>
+  <div class="py-15 container mx-auto px-4 sm:px-6 lg:px-8">
+    <h1 class="text-4xl md:text-5xl font-headline text-center mb-12 md:mb-16">
+      Under Construction
+    </h1>
+  </div>
 </Layout>
