Fixed license and adding post creating script

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,9 +31,14 @@ const currentYear = new Date().getFullYear();
     <footer
       class="text-center py-6 text-sm text-gray-400 border-t border-gray-700"
     >
-      © {currentYear} {NAME}.
-      Site code licensed under <a href="https://opensource.org/licenses/MIT" class="underline hover:text-gray-300">MIT</a>. 
-      Content licensed under <a href="https://creativecommons.org/licenses/by/4.0/" class="underline hover:text-gray-300">CC BY 4.0</a>, unless otherwise noted. All rights reserved.
+      © {currentYear}
+      {NAME}. Site code licensed under <a
+        href="https://opensource.org/licenses/MIT"
+        class="underline hover:text-gray-300">MIT</a
+      >. Content licensed under <a
+        href="https://creativecommons.org/licenses/by/4.0/"
+        class="underline hover:text-gray-300">CC BY 4.0</a
+      >, unless otherwise noted. All rights reserved.
     </footer>
   </body>
 </html>
